Use `Path::of` instead of `Paths::get`
They do the same thing, but I already use the former in other places.